vnpay_err.txt
[eval]:1
import('./config/vnpayConfig.js').then(async
                                       ^^^^^
Expected ',', got '<eof>'

SyntaxError: missing ) after argument list
    at makeContextifyScript (node:internal/vm:185:14)
    at compileScript (node:internal/process/execution:383:10)
    at evalTypeScript (node:internal/process/execution:256:22)
    at node:internal/main/eval_string:74:3

Node.js v22.20.0
